# sponsorship-canister-manager

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
sponsor/: Cargo.toml  sponsor.did
sponsor/src/: lib.rs
src/example_backend/: Cargo.toml
src/sponsor/: Cargo.toml  sponsor.did
src/sponsor/src/: lib.rs
src/test_canister/: Cargo.toml  test_canister.did
src/test_canister/src/: lib.rs
