[package]
name = "sponsor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.5.6"