[package]
name = "sponsor"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.5"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
# candid.workspace = true
# ic-cdk.workspace = true
# ic-cdk-macros.workspace = true
ic-stable-structures = "0.6.0"
serde = "1.0.132"